# warp-to

./: Cargo.toml  README.md  build.ps1  build.sh
scripts/: w.ps1  w.sh  wo.ps1
src/: args.rs  config.rs  fs.rs  main.rs  search.rs  walker.rs
